Fix support for Java 9+ runtime